# McGill-GPT

./: .gitignore  chatbot.py  ingest.py  llm.py  pyproject.toml
